compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case_tuple_guard.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 365
expression: "case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:24
  │
1 │ case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }
  │                        ^^^^^^^^^^^^^^

Expected type:

    #(Int, Int, Int)

Found type:

    #(Int, Float)
